# running-content-engine

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
data/sample/: activity.gpx  activity.json  garmin-activity.tcx  strava-activities.csv
docs/: ai-content-enrichment.md  architecture.md  content-package.md  data-integration.md  decision-log.md  folder-structure.md  glossary.md  manual-review-editing-workflow.md  metadata-schema.md  milestones.md  prompt-library.md  remotion-prototype.md  remotion-templates.md  requirements.md  roadmap.md  story-brief.md  testing-playbook.md
examples/: run_metadata.sample.json
journal/2026/: 2026-07-04.md
prompts/: daily-run-recap.md  enrich-content-notes.md  health-transformation-story.md  race-day-recap.md  shoe-review.md  weekly-training-summary.md
remotion/: .gitignore  README.md  package.json  remotion.config.ts  tsconfig.json
remotion/src/: Root.tsx  index.ts  theme.ts  types.ts
remotion/src/compositions/: DailyRunShort.tsx  DataOverlayClip.tsx  RaceDaySummary.tsx  ShoeReviewIntro.tsx  WeeklyTrainingRecap.tsx
remotion/src/data/: sample-overlay.json  sample-race.json  sample-run.json  sample-shoe.json  sample-week.json
remotion/src/templates/: Background.tsx  MetricRow.tsx  StatCallout.tsx  TitleCard.tsx
schemas/: run_metadata.schema.json
scripts/: ai_providers.py  apple_health.py  create_content_package.py  create_day.py  create_metadata.py  create_prompt.py  create_story_brief.py  enrich_notes.py  import_activity.py  run_day.py  weather.py
tests/: test_ai_providers.py  test_apple_health.py  test_create_content_package.py  test_create_day.py  test_create_metadata.py  test_create_prompt.py  test_create_story_brief.py  test_enrich_notes.py  test_import_activity.py  test_run_day.py  test_weather.py
